--- a/ODK.Web.Razor/Pages/Groups/Index.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Index.cshtml
@@ -48,7 +48,7 @@
                     {
                         <p>
                             No matching results. 
-                            <a href="@OdkRoutes2.MemberGroups.GroupCreate(viewModel.Platform)">Create a group</a>
+                            <a href="@OdkRoutes.MemberGroups.GroupCreate(viewModel.Platform)">Create a group</a>
                         </p>
                     }
                 </div>
