--- a/ODK.Web.Razor/Pages/My/Groups/GroupCreate.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/GroupCreate.cshtml
@@ -19,7 +19,7 @@
 {
     Breadcrumbs = new[]
     {
-        new MenuItem { Link = OdkRoutes2.MemberGroups.Index(viewModel.Platform), Text = "My groups" },
+        new MenuItem { Link = OdkRoutes.MemberGroups.Index(viewModel.Platform), Text = "My groups" },
         new MenuItem { Text = "Create" }
     },
     ContentFunc = 
