--- a/ODK.Web.Razor/Pages/My/Groups/Index.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Index.cshtml
@@ -38,7 +38,7 @@
                 {
                     <p>
                         You haven't created any groups. 
-                        <a href="@OdkRoutes2.MemberGroups.GroupCreate(viewModel.Platform)">Create a group</a>
+                        <a href="@OdkRoutes.MemberGroups.GroupCreate(viewModel.Platform)">Create a group</a>
                     </p>
                 }
             </section>
@@ -78,7 +78,7 @@
                 {
                     <p>
                         You aren't a member of any groups.
-                        <a href="@OdkRoutes2.Groups.Index(viewModel.Platform)">Find a group</a>
+                        <a href="@OdkRoutes.Groups.Index(viewModel.Platform)">Find a group</a>
                     </p>
                 }
             </section>
