--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
@@ -24,7 +24,7 @@
     {
         new MenuItem
         {
-            Link = OdkRoutes2.MemberGroups.Events(Model.Platform, Model.Chapter),
+            Link = OdkRoutes.MemberGroups.Events(Model.Platform, Model.Chapter),
             Text = "Events"
         },
         new MenuItem { Text = "New" }
