--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventHeader.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventHeader.cshtml
@@ -6,9 +6,9 @@
 
 <h5>@Model.Event.Date.EventDate()</h5>
 <h5 class="d-flex justify-content-between">
-    <a href="@OdkRoutes2.MemberGroups.Venue(Model.Platform, Model.Chapter, Model.Venue.Id)">@Model.Venue.Name</a>
+    <a href="@OdkRoutes.MemberGroups.Venue(Model.Platform, Model.Chapter, Model.Venue.Id)">@Model.Venue.Name</a>
 </h5>
 
-<a href="@OdkRoutes2.Groups.Event(Model.Platform, Model.Chapter, Model.Event.Id)">
+<a href="@OdkRoutes.Groups.Event(Model.Platform, Model.Chapter, Model.Event.Id)">
     <i class="fas fa-home"></i> View in site
 </a>
