--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMemberContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMemberContent.cshtml
@@ -11,7 +11,7 @@
 {
     Breadcrumbs = new[]
     {
-        new MenuItem { Link = OdkRoutes2.MemberGroups.MemberAdmins(Model.Platform, Model.Chapter), Text = "Admins" },
+        new MenuItem { Link = OdkRoutes.MemberGroups.MemberAdmins(Model.Platform, Model.Chapter), Text = "Admins" },
         new MenuItem { Text = Model.AdminMember.Member.FullName }
     }
 })
