--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_BulkEmailContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_BulkEmailContent.cshtml
@@ -52,7 +52,7 @@
             </p>
 
             <p>
-                <a href="@OdkRoutes2.MemberGroups.Members(Model.Platform, Model.Chapter)" target="_blank"
+                <a href="@OdkRoutes.MemberGroups.Members(Model.Platform, Model.Chapter)" target="_blank"
                     data-live-url-base>
                     Preview members
                 </a>
