--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberImageContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberImageContent.cshtml
@@ -25,7 +25,7 @@
     {
         new MenuItem
         {
-            Link = OdkRoutes2.MemberGroups.Members(platform, Model.Chapter),
+            Link = OdkRoutes.MemberGroups.Members(platform, Model.Chapter),
             Text = "Members"
         },
         new MenuItem { Text = Model.Member.FullName }
