--- a/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueContent.cshtml
@@ -13,7 +13,7 @@
     {
         new MenuItem
         {
-            Link = OdkRoutes2.MemberGroups.Venues(Model.Platform, Model.Chapter),
+            Link = OdkRoutes.MemberGroups.Venues(Model.Platform, Model.Chapter),
             Text = "Venues"
         },
         new MenuItem { Text = Model.Venue.Name }
