--- a/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueCreateContent.cshtml
@@ -17,7 +17,7 @@
     {
         new MenuItem
         {
-            Link = OdkRoutes2.MemberGroups.Venues(platform, Model),
+            Link = OdkRoutes.MemberGroups.Venues(platform, Model),
             Text = "Venues"
         },
         new MenuItem { Text = "New" }
