--- a/ODK.Web.Razor/Views/Shared/Events/_ListEventTitle.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_ListEventTitle.cshtml
@@ -11,7 +11,7 @@
             ResponseType = Model.Event.Response
         })
 
-        <a href="@OdkRoutes2.Groups.Event(Model.Platform, Model.Chapter, Model.Event.EventId)" 
+        <a href="@OdkRoutes.Groups.Event(Model.Platform, Model.Chapter, Model.Event.EventId)" 
            class="@(Model.Event.Response != EventResponseType.None ? "ms-1" : null)">
             @Model.Event.EventName
         </a>
