--- a/ODK.Web.Razor/Views/Shared/Groups/Home/_GroupContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/Home/_GroupContent.cshtml
@@ -34,7 +34,7 @@
                         @Html.Raw(Model.Texts.WelcomeText)
                     </div>
 
-                    <a href="@OdkRoutes2.Groups.Join(Model.Platform, Model.Chapter)" class="btn btn-success">
+                    <a href="@OdkRoutes.Groups.Join(Model.Platform, Model.Chapter)" class="btn btn-success">
                         Join
                     </a>
                 </section>
@@ -45,7 +45,7 @@
                 @await Html.PartialAsync("Components/_Panel", new PanelViewModel
                 {
                     TitleContentFunc = @<h3>Upcoming events</h3>,
-                    TitleEndContentFunc = @<a href="@OdkRoutes2.Groups.Events(Model.Platform, Model.Chapter)">See all</a>,
+                    TitleEndContentFunc = @<a href="@OdkRoutes.Groups.Events(Model.Platform, Model.Chapter)">See all</a>,
                     BodyContentFunc = 
                         @<div>
                             @await Html.PartialAsync("Events/_EventList", new EventListViewModel
@@ -71,7 +71,7 @@
                 @await Html.PartialAsync("Components/_Panel", new PanelViewModel
                 {
                     TitleContentFunc = @<h3>Recent events</h3>,
-                    TitleEndContentFunc = @<a href="@OdkRoutes2.Groups.PastEvents(Model.Platform, Model.Chapter)">See all</a>,
+                    TitleEndContentFunc = @<a href="@OdkRoutes.Groups.PastEvents(Model.Platform, Model.Chapter)">See all</a>,
                     BodyContentFunc = 
                         @<div>
                             @await Html.PartialAsync("Events/_EventList", new EventListViewModel
