--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupEventsMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupEventsMenu.cshtml
@@ -7,8 +7,8 @@
 @{    
     var menuItems = new MenuItem[]
     {
-        new MenuItem { Link = OdkRoutes2.Groups.Events(Model.Platform, Model.Chapter), Text = "Upcoming" },
-        new MenuItem { Link = OdkRoutes2.Groups.PastEvents(Model.Platform, Model.Chapter), Text = "Past" }
+        new MenuItem { Link = OdkRoutes.Groups.Events(Model.Platform, Model.Chapter), Text = "Upcoming" },
+        new MenuItem { Link = OdkRoutes.Groups.PastEvents(Model.Platform, Model.Chapter), Text = "Past" }
     };
 }
 
