--- a/ODK.Web.Razor/Views/Shared/Header/_SiteAccountDropdown.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_SiteAccountDropdown.cshtml
@@ -20,14 +20,14 @@
                 </span>
                 <span>My account</span>
             </a>
-            <a class="dropdown-item dropdown-item--icon" href="@OdkRoutes2.MemberGroups.Index(platform)">
+            <a class="dropdown-item dropdown-item--icon" href="@OdkRoutes.MemberGroups.Index(platform)">
                 <span class="icon">
                     @await Html.PartialAsync("Components/Icons/_Groups")
                 </span>
                 <span>My groups</span>
             </a>
 
-            <a class="dropdown-item dropdown-item--icon" href="@OdkRoutes2.MemberGroups.GroupCreate(platform)">
+            <a class="dropdown-item dropdown-item--icon" href="@OdkRoutes.MemberGroups.GroupCreate(platform)">
                 <span class="icon">
                     <i class="fa-solid fa-plus"></i>
                 </span>
