--- a/ODK.Web.Razor/Views/Shared/Site/_SiteAlerts.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Site/_SiteAlerts.cshtml
@@ -26,6 +26,6 @@
         @chaptersPendingPublication.Length 
         @StringUtils.Pluralise(chaptersPendingPublication.Length, "group") 
         waiting to be published.
-        <a href="@OdkRoutes2.MemberGroups.Index(platform)">My groups</a>
+        <a href="@OdkRoutes.MemberGroups.Index(platform)">My groups</a>
     </div>
 }
