--- a/ODK.Web.Razor/Pages/Groups/Error.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Error.cshtml
@@ -18,7 +18,7 @@
 {
     Breadcrumbs = new []
     {
-        new MenuItem { Link = OdkRoutes2.Groups.Group(PlatformType.Default, chapter), Text = chapter.Name },
+        new MenuItem { Link = OdkRoutes.Groups.Group(PlatformType.Default, chapter), Text = chapter.Name },
         new MenuItem { Text = Model.ErrorStatusCode.ErrorPageTitle() }
     },
     Content = await Html.PartialAsync("Errors/_ErrorPage", Model.ErrorStatusCode),
