--- a/ODK.Web.Razor/Views/Shared/Account/_ConversationsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ConversationsContent.cshtml
@@ -41,14 +41,14 @@
                     @if (Model.Platform != PlatformType.DrunkenKnitwits)
                     {
                         <td>
-                            <a href="@OdkRoutes2.Groups.Group(Model.Platform, chapter)">
+                            <a href="@OdkRoutes.Groups.Group(Model.Platform, chapter)">
                                 @chapter.Name
                             </a>
                         </td>
                     }
                     
                     <td>
-                        <a href="@OdkRoutes2.Groups.Conversation(Model.Platform, chapter, dto.Conversation.Id)">
+                        <a href="@OdkRoutes.Groups.Conversation(Model.Platform, chapter, dto.Conversation.Id)">
                             @dto.Conversation.Subject
                         </a>
                     </td>
