--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventBreadcrumbs.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventBreadcrumbs.cshtml
@@ -10,7 +10,7 @@
     {
         new MenuItem
         {
-            Link = OdkRoutes2.MemberGroups.Events(Model.Platform, Model.Chapter),
+            Link = OdkRoutes.MemberGroups.Events(Model.Platform, Model.Chapter),
             Text = "Events"
         },
         new MenuItem { Text = Model.Event.GetDisplayName() }
