--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventsContent.cshtml
@@ -25,7 +25,7 @@
 
 <section class="section">
     <p>
-        <a class="btn btn-primary" href="@OdkRoutes2.MemberGroups.EventCreate(Model.Platform, Model.Chapter)">Create</a>
+        <a class="btn btn-primary" href="@OdkRoutes.MemberGroups.EventCreate(Model.Platform, Model.Chapter)">Create</a>
     </p>
 
     <div class="table-responsive">
@@ -50,13 +50,13 @@
                     var venue = venueDictionary[@event.VenueId];
 
                     <tr>
-                        <td><a href="@OdkRoutes2.MemberGroups.Event(Model.Platform, Model.Chapter, @event.Id)">@(@event.GetDisplayName())</a></td>
+                        <td><a href="@OdkRoutes.MemberGroups.Event(Model.Platform, Model.Chapter, @event.Id)">@(@event.GetDisplayName())</a></td>
                         <td>@(@event.Date.EventDate())</td>
-                        <td><a href="@OdkRoutes2.MemberGroups.Venue(Model.Platform, Model.Chapter, venue.Id)">@venue.Name</a></td>
+                        <td><a href="@OdkRoutes.MemberGroups.Venue(Model.Platform, Model.Chapter, venue.Id)">@venue.Name</a></td>
                         <td>
                             @if (eventInvites?.SentUtc == null)
                             {
-                                <a href="@OdkRoutes2.MemberGroups.EventInvites(Model.Platform, Model.Chapter, @event.Id)">
+                                <a href="@OdkRoutes.MemberGroups.EventInvites(Model.Platform, Model.Chapter, @event.Id)">
                                     @(eventInvites?.ScheduledUtc != null ? "Scheduled" : "Send")
                                 </a>
                             }
