--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMembersContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMembersContent.cshtml
@@ -73,7 +73,7 @@
 
                             <tr>
                                 <td>
-                                    <a href="@OdkRoutes2.MemberGroups.MemberAdmin(Model.Platform, Model.Chapter, adminMember)">@member.FullName</a>
+                                    <a href="@OdkRoutes.MemberGroups.MemberAdmin(Model.Platform, Model.Chapter, adminMember)">@member.FullName</a>
                                 </td>
                                 <td class="text-break">
                                     @adminMember.AdminEmailAddress
