--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberBreadcrumbs.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberBreadcrumbs.cshtml
@@ -10,7 +10,7 @@
     {
         new MenuItem
         {
-            Link = OdkRoutes2.MemberGroups.Members(Model.Platform, Model.Chapter),
+            Link = OdkRoutes.MemberGroups.Members(Model.Platform, Model.Chapter),
             Text = "Members"
         },
         new MenuItem { Text = Model.Member.FullName }
