--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberConversationsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberConversationsContent.cshtml
@@ -35,7 +35,7 @@
 
                         <tr>
                             <td>
-                                <a href="@OdkRoutes2.MemberGroups.GroupConversation(Model.Platform, Model.Chapter, conversation.Id)">
+                                <a href="@OdkRoutes.MemberGroups.GroupConversation(Model.Platform, Model.Chapter, conversation.Id)">
                                     @dto.Conversation.Subject
                                 </a>
                             </td>
