--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberEventsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberEventsContent.cshtml
@@ -38,14 +38,14 @@
         {
             <tr>
                 <td>
-                    <a href="@OdkRoutes2.MemberGroups.Event(Model.Platform, Model.Chapter, response.EventId)">
+                    <a href="@OdkRoutes.MemberGroups.Event(Model.Platform, Model.Chapter, response.EventId)">
                         @response.Date.ToString("yyyy-MM-dd")
                     </a>
                 </td>
                 <td>
                     @if (response.VenueId != null && !string.IsNullOrEmpty(response.VenueName))
                     {
-                        <a href="@OdkRoutes2.MemberGroups.Venue(Model.Platform, Model.Chapter, response.VenueId.Value)">
+                        <a href="@OdkRoutes.MemberGroups.Venue(Model.Platform, Model.Chapter, response.VenueId.Value)">
                             @response.VenueName
                         </a>
                     }                 
