--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionCreateContent.cshtml
@@ -13,7 +13,7 @@
     {
         new MenuItem
         {
-            Link = OdkRoutes2.MemberGroups.MembersSubscriptions(Model.Platform, Model.Chapter),
+            Link = OdkRoutes.MemberGroups.MembersSubscriptions(Model.Platform, Model.Chapter),
             Text = "Subscriptions"
         },
         new MenuItem { Text = "New" }
@@ -30,7 +30,7 @@
                 {
                     <div class="alert alert-warning">
                         You must update your 
-                        <a href="@OdkRoutes2.MemberGroups.GroupPayments(Model.Platform, Model.Chapter)">payment settings</a> 
+                        <a href="@OdkRoutes.MemberGroups.GroupPayments(Model.Platform, Model.Chapter)">payment settings</a> 
                         before you can create subscriptions
                     </div>
                     return;
