--- a/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueAdminTabs.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueAdminTabs.cshtml
@@ -4,9 +4,9 @@
 
 <ul class="nav nav-underline my-3">
     <li class="nav-item">
-        <a class="nav-link" data-menu-link="exact" href="@OdkRoutes2.MemberGroups.Venue(Model.Platform, Model.Chapter, Model.Venue.Id)">Edit</a>
+        <a class="nav-link" data-menu-link="exact" href="@OdkRoutes.MemberGroups.Venue(Model.Platform, Model.Chapter, Model.Venue.Id)">Edit</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" data-menu-link href="@OdkRoutes2.MemberGroups.VenueEvents(Model.Platform, Model.Chapter, Model.Venue.Id)">Events</a>
+        <a class="nav-link" data-menu-link href="@OdkRoutes.MemberGroups.VenueEvents(Model.Platform, Model.Chapter, Model.Venue.Id)">Events</a>
     </li>
 </ul>
