--- a/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueEventsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueEventsContent.cshtml
@@ -16,7 +16,7 @@
     {
         new MenuItem
         {
-            Link = OdkRoutes2.MemberGroups.Venues(Model.Platform, Model.Chapter),
+            Link = OdkRoutes.MemberGroups.Venues(Model.Platform, Model.Chapter),
             Text = "Venues"
         },
         new MenuItem { Text = Model.Venue.Name }
@@ -31,7 +31,7 @@
 })
 
 <p>
-    <a href="@OdkRoutes2.MemberGroups.EventCreate(Model.Platform, Model.Chapter)?venueId=@Model.Venue.Id" class="btn btn-primary">
+    <a href="@OdkRoutes.MemberGroups.EventCreate(Model.Platform, Model.Chapter)?venueId=@Model.Venue.Id" class="btn btn-primary">
         Create event
     </a>
 </p>
@@ -49,7 +49,7 @@
         {
             <tr>
                 <td>
-                    <a href="@OdkRoutes2.MemberGroups.Event(Model.Platform, Model.Chapter, @event.Id)">@(@event.GetDisplayName())</a>
+                    <a href="@OdkRoutes.MemberGroups.Event(Model.Platform, Model.Chapter, @event.Id)">@(@event.GetDisplayName())</a>
                 </td>
                 <td>@(@event.Date.EventDate())</td>
             </tr>
