--- a/ODK.Web.Razor/Views/Shared/Groups/Profile/_GroupProfileMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/Profile/_GroupProfileMenu.cshtml
@@ -6,8 +6,8 @@
 @{
     var menuItems = new MenuItem[]
     {
-        new MenuItem { Link = OdkRoutes2.Groups.Profile.Index(Model.Chapter), Text = "Profile" },      
-        new MenuItem { Link = OdkRoutes2.Groups.Profile.Subscription(Model.Chapter), Text = "My subscription" }
+        new MenuItem { Link = OdkRoutes.Groups.Profile.Index(Model.Chapter), Text = "Profile" },      
+        new MenuItem { Link = OdkRoutes.Groups.Profile.Subscription(Model.Chapter), Text = "My subscription" }
     };
 }
 
