(emails): allow site emails to be sealed

--- a/ODK.Web.Razor/Pages/SuperAdmin/Email.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Email.cshtml
@@ -19,4 +19,6 @@
     }
 })
 
-@await Html.PartialAsync("SuperAdmin/_EmailContent", new EmailContentViewModel(Model.Email))
+<section class="section">
+    @await Html.PartialAsync("SuperAdmin/_EmailContent", new EmailContentViewModel(Model.Email))
+</section>
