--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailContent.cshtml
@@ -3,6 +3,14 @@
 
 <form method="post">
     @Html.AntiForgeryToken()
+    
+    <div class="form-check mb-3">
+        @Html.CheckBox("overridable", Model.Email.Overridable, new { @class = "form-check-input" })
+        <label class="form-check-label" for="overridable">
+            Overridable
+        </label>
+    </div>
+
     @await Html.PartialAsync("Admin/Chapter/_EmailForm", new ChapterEmailFormViewModel
     {
         Content = Model.Email.HtmlContent,
